--- a/public/css/components/_navigation.scss
+++ b/public/css/components/_navigation.scss
@@ -88,7 +88,6 @@
     bottom: -10px;
   }
 
-
   .is-open & {
     @include rotate(180deg);
     background: none;
@@ -123,7 +122,7 @@
   @include transition-property(width height padding);
   @include transition-duration(0.5s);
   height: 32px;
-  padding: 10px 30px;
+  padding: 5px 40px;
   text-transform: uppercase;
   font-size: $h5-font-size;
   font-weight: 300;
@@ -143,12 +142,19 @@
 
   }
 
-  @include breakpoint(max-width ($break-medium - 1px)) {
+  @include breakpoint(max-width $break-medium - 1px) {
     @include transition-duration(0s);
     display: block;
     background-color: palette(black);
-    padding: 5px 40px;
     width: auto;
+  }
+
+  @include breakpoint($break-medium) {
+      padding: 10px 20px;
+  }
+
+  @include breakpoint($break-large) {
+      padding: 10px 30px;
   }
 }
 
